tests/neg-custom-args/safe-init/override9.scala
trait Foo {
  @scala.annotation.partial
  def name: String
  val message = "hello, " + name
}

class Bar extends Foo {
  def name = message     // error // error
}